--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express-prettify": "^0.1.1",
     "helmet": "^3.22.0",
     "json-beautify": "^1.1.1",
+    "nodemailer": "^6.7.7",
     "nodemon": "^2.0.16",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3"
